--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   },
   "require": {
 	"php": ">=5.4",
-	"ext-gd": "*"
+	"ext-gd": "*",
+    "ext-json": "*"
   },
   "suggest": {
 	"paragonie/random_compat": "Provides better randomness in PHP 5.x"
